# snake

./: .gitignore  CMakeLists.txt
android/app/: build.gradle
core/: CMakeLists.txt
core/src/: figure.cpp  figure.hpp  gameboard.cpp  gameboard.hpp  position.hpp  size.hpp  snake.cpp  snake.hpp
game/: CMakeLists.txt
game/src/: application.cpp  application.hpp  main.cpp  map.cpp  snake.cpp  snake.hpp
src/: application.cpp  application.hpp  cell.cpp  cell.hpp  framework.hpp  main.cpp  map.cpp  map.hpp  mapfactory.cpp  mapfactory.hpp  node.cpp  node.hpp  shape.hpp  snake.cpp  snake.hpp  snakeapp.cpp  snakeapp.hpp
