cmake_minimum_required(VERSION 3.17)
set(CMAKE_CXX_STANDARD 17)
file(GLOB_RECURSE PROJECT_SOURCES src/*)
if (ANDROID)
    project(main)    
    add_library(${PROJECT_NAME} SHARED ${PROJECT_SOURCES})
else ()
    project(game)    
    add_executable(${PROJECT_NAME} ${PROJECT_SOURCES})
endif ()
set_target_properties(${PROJECT_NAME} PROPERTIES CMAKE_CXX_STANDARD 17)
